fix: align margin top home icon leftbar

--- a/src/Components/Nav/LeftBar/LeftBar.scss
+++ b/src/Components/Nav/LeftBar/LeftBar.scss
@@ -13,6 +13,7 @@
     left: 0;
     width: 100%;
     padding: 0;
+    margin-top: 7px;
   }
   li:nth-child(1) {
     margin-bottom: 60px;
